--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,7 +1,4 @@
-# This workflow will build a Java project with Gradle
-# For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-gradle
-
-name: Java CI with Gradle
+name: Build and test
 
 on:
   push:
@@ -64,12 +61,6 @@ jobs:
 
       - name: Python dependencies
         run: pip install -r integration/requirements.txt
-
-
-#      - name: Debugging with tmate
-#        uses: mxschmitt/action-tmate@v3.3
-#        timeout-minutes: 20
-
 
       - name: Integrations
         run: pytest
