--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
-      run: ./gradlew build
+      run: ./gradlew build fatJar
     - uses: actions/upload-artifact@v2
       with:
         name: Package
@@ -28,7 +28,7 @@ jobs:
     needs: build
     services:
       zk:
-        image: zookeeper:3.6.2
+        image: zookeeper:3.7.0
         ports:
           - 2181:2181
     runs-on: ubuntu-latest
@@ -43,11 +43,11 @@ jobs:
         id: cahce-zk
         with:
           path: |
-            apache-zookeeper-3.6.2-bin
-          key: ${{ runner.os }}-apache-zookeeper-3.6.2
+            apache-zookeeper-3.7.0-bin
+          key: ${{ runner.os }}-apache-zookeeper-3.7.0
 
       - name: get zk binaries
-        run: wget https://apache.claz.org/zookeeper/zookeeper-3.6.2/apache-zookeeper-3.6.2-bin.tar.gz && tar xf apache-zookeeper-3.6.2-bin.tar.gz
+        run: wget https://mirrors.advancedhosters.com/apache/zookeeper/zookeeper-3.7.0/apache-zookeeper-3.7.0-bin.tar.gz && tar xf apache-zookeeper-3.7.0-bin.tar.gz
         if: steps.cahce-zk.outputs.cache-hit != 'true'
 
       - name: Download lib folder
@@ -67,5 +67,24 @@ jobs:
         working-directory: integration
         env:
           LIBS_DIR: ../
-          ZK_HOME_DIR: ../apache-zookeeper-3.6.2-bin
+          ZK_HOME_DIR: ../apache-zookeeper-3.7.0-bin
           ZK_CONNECTION_STRING: 127.0.0.1:2181
+
+  release:
+    environment:
+      name: default
+      url: https://github.com
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download lib folder
+        uses: actions/download-artifact@v2
+        with:
+          name: Package
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: zgroups-1.0-SNAPSHOT.jar
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
