--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,9 @@
 plugins {
     id 'java'
+    id 'application'
 }
 
+mainClassName = 'Executor'
 version '1.0-SNAPSHOT'
 
 repositories {
@@ -12,16 +14,17 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
 
-    compile group: 'org.apache.zookeeper', name: 'zookeeper', version: '3.6.2'
-    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.14.0'
-    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.14.0'
-}
+    implementation 'org.apache.zookeeper:zookeeper:3.7.0'
+    implementation 'org.apache.logging.log4j:log4j-api:2.14.0'
+    implementation 'org.apache.logging.log4j:log4j-core:2.14.0'}
 
 test {
     useJUnitPlatform()
 }
 
-jar {
+task fatJar(type: Jar) {
+    duplicatesStrategy(DuplicatesStrategy.INCLUDE)
+
     manifest {
         attributes(
                 "Implementation-Title": "ZGroup",
@@ -31,6 +34,7 @@ jar {
     }
 
     from {
-        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
     }
+    with jar
 }
