--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,7 @@ plugins {
     id 'application'
 }
 
-mainClassName = 'Executor'
-version '1.0-SNAPSHOT'
+version '2.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
@@ -15,8 +14,15 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
 
     implementation 'org.apache.zookeeper:zookeeper:3.7.0'
-    implementation 'org.apache.logging.log4j:log4j-api:2.14.0'
-    implementation 'org.apache.logging.log4j:log4j-core:2.14.0'}
+    implementation 'org.apache.logging.log4j:log4j-api:2.14.1'
+    implementation 'org.apache.logging.log4j:log4j-core:2.14.1'
+
+//    compile group: 'org.apache.zookeeper', name: 'zookeeper', version: '3.6.2'
+    implementation group: 'com.beust', name: 'jcommander', version: '1.81'
+
+//    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.14.0'
+//    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.14.0'
+}
 
 test {
     useJUnitPlatform()
@@ -29,7 +35,7 @@ task fatJar(type: Jar) {
         attributes(
                 "Implementation-Title": "ZGroup",
                 "Implementation-Version": archiveVersion,
-                "Main-Class": "Executor"
+                "Main-Class": "Main"
         )
     }
 
