--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,22 +1,7 @@
 # You might be wondering why we have 2 config files.
-# so did I.
-# It's 2 different frameworks, log4j1, log4j2. fuck you java.
+# It's 2 different frameworks, log4j1, log4j2.
 
-#log4j.rootLogger=debug, stdout, R
-log4j.rootLogger=debug, stdout
-
+log4j.rootLogger=fatal, stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-
-# Pattern to output the caller's file name and line number.
 log4j.appender.stdout.layout.ConversionPattern=%5p [%t] (%F:%L) - %m%n
-
-#log4j.appender.R=org.apache.log4j.RollingFileAppender
-#log4j.appender.R.File=example.log
-
-#log4j.appender.R.MaxFileSize=100KB
-# Keep one backup file
-#log4j.appender.R.MaxBackupIndex=1
-
-#log4j.appender.R.layout=org.apache.log4j.PatternLayout
-#log4j.appender.R.layout.ConversionPattern=%p %t %c - %m%n
